RustPlugin/Source/RustPlugin/Public/Bindings.h

enum class ReflectionType : uint32_t {
  Float,
  Vector3,
  Bool,
  Quaternion,
  UClass,
  USound,
  Composite,
};
enum class UObjectType : uint32_t {
  UClass,
};
struct Vector3 {
  float x;
  float y;
  float z;
};
struct Quaternion {
  float x;
  float y;
  float z;
  float w;
};
struct SoundSettings {
  float volume;
  float pitch;
};
using GetVelocityFn = Vector3(*)(const UPrimtiveOpaque *primitive);
using GetBoundingBoxExtentFn = Vector3(*)(const UPrimtiveOpaque *primitive);
struct EditorComponentFns {
  GetEditorComponentUuidsFn get_editor_components;
  GetEditorComponentQuatFn get_editor_component_quat;
  GetEditorComponentVectorFn get_editor_component_vector;
  GetEditorComponentBoolFn get_editor_component_bool;
  GetEditorComponentFloatFn get_editor_component_float;
  GetEditorComponentUObjectFn get_editor_component_uobject;
};
struct SoundFns {
  PlaySoundAtLocationFn play_sound_at_location;
};
extern void PlaySoundAtLocation(const UOSoundBaseOpague *sound,
                                Vector3 location,
                                Quaternion rotation,
                                const SoundSettings *settings);