unreal-ffi/src/lib.rs


#[repr(C)]
pub struct EditorComponentFns {
    pub get_editor_components: GetEditorComponentUuidsFn,
    pub get_editor_component_quat: GetEditorComponentQuatFn,
    pub get_editor_component_vector: GetEditorComponentVectorFn,
    pub get_editor_component_bool: GetEditorComponentBoolFn,
    pub get_editor_component_float: GetEditorComponentFloatFn,
    pub get_editor_component_uobject: GetEditorComponentUObjectFn,
}

#[repr(C)]
pub struct SoundSettings {
    pub volume: f32,
    pub pitch: f32,
}
impl Default for SoundSettings {
    fn default() -> Self {
        Self {
            volume: 1.0,
            pitch: 1.0,
        }
    }
}

extern "C" {
    pub fn PlaySoundAtLocation(
        sound: *const UOSoundBaseOpague,
        location: Vector3,
        rotation: Quaternion,
        settings: *const SoundSettings,
    );
}
pub type PlaySoundAtLocationFn = unsafe extern "C" fn(
    sound: *const UOSoundBaseOpague,
    location: Vector3,
    rotation: Quaternion,
    settings: *const SoundSettings,
);

#[repr(C)]
pub struct SoundFns {
    pub play_sound_at_location: PlaySoundAtLocationFn,
}
